--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "implementations/c/third-party/arm/mbed-crypto"]
     path = implementations/c/third-party/arm/mbed-crypto
     url = https://github.com/ARMmbed/mbed-crypto.git
+[submodule "implementations/c/third-party/infineon/optiga-trust-x"]
+	path = implementations/c/third-party/infineon/optiga-trust-x
+	url = https://github.com/Infineon/optiga-trust-x.git
