build: Add Optiga Trust X to gradle builds fix: Ignore dirty flag for optiga github

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,4 @@
 [submodule "implementations/c/third-party/infineon/optiga-trust-x"]
 	path = implementations/c/third-party/infineon/optiga-trust-x
 	url = https://github.com/Infineon/optiga-trust-x.git
+    ignore = dirty
